--- a/themes/uhsg_theme/sass/components/_theme.scss
+++ b/themes/uhsg_theme/sass/components/_theme.scss
@@ -15,6 +15,9 @@
     display: flex;
     align-items: center;
     padding: 2em;
+    @include breakpoint($small) {
+      position: absolute;
+    }
   }
 
   .theme__teaser-image {
